/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'jacoco-report-aggregation'
    id 'checkstyle'
}

checkstyle {
    configDirectory = file("$rootProject.projectDir/settings/checkstyle")
}

repositories {
    maven {
        url = uri('https://maven.aliyun.com/repository/public')
    }
    mavenCentral()
    mavenLocal()
}

java.targetCompatibility = JavaVersion.VERSION_17
java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    api platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    api platform("com.linecorp.armeria:armeria-bom:${armeriaVersion}")
    api platform("io.netty:netty-bom:${nettyVersion}")
    api platform("io.opentelemetry:opentelemetry-bom:${opentelemetryVersion}")
    api platform("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:${opentelemetryAlphaVersion}")
    api 'org.slf4j:slf4j-api'
    api "jakarta.annotation:jakarta.annotation-api"
    api "com.google.code.findbugs:jsr305:3.0.2"
    // unit test
    testImplementation 'org.assertj:assertj-core:3.26.3'
    testImplementation 'uk.org.webcompere:system-stubs-jupiter:2.1.7'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation "org.junit.jupiter:junit-jupiter-api"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
    testImplementation "org.junit.jupiter:junit-jupiter-params"
    testImplementation 'org.slf4j:slf4j-simple:2.0.16'
}

java {
    withSourcesJar()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_11)) {
        jvmArgs('--illegal-access=permit')
        jvmArgs('--add-opens', 'java.base/java.lang=ALL-UNNAMED')
        jvmArgs('--add-opens', 'java.base/java.util=ALL-UNNAMED')
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = project.group
            version = project.version
            from(components.java)
        }
    }
    repositories {
        maven {
            name = "central"
            def releasesRepoUrl = "https://repo.in.zhihu.com/artifactory/libs-release-local"
            def snapshotsRepoUrl = "https://repo.in.zhihu.com/artifactory/libs-snapshot-local"
            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
            credentials {
                username = "${zhihuRepoUser}"
                password = "${zhihuRepoPwd}"
            }
        }
    }
}
